Money Manager 22.2.1
* Java 18