@@ -10,13 +10,13 @@
 
     <groupId>org.panteleyev.money</groupId>
     <artifactId>money-manager-desktop</artifactId>
-    <version>22.2.0</version>
+    <version>22.2.1</version>
     <packaging>jar</packaging>
     <name>Money Manager Desktop</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.release>18</maven.compiler.release>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <appModule>org.panteleyev.money</appModule>
         <appMainClass>org.panteleyev.money.MoneyApplication</appMainClass>
@@ -154,11 +154,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${mavenCompilerPluginVersion}</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -200,7 +195,6 @@
                         <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
-                        --enable-preview
                         --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                         --add-opens javafx.graphics/javafx.scene=org.controlsfx.controls
                         --add-exports javafx.base/com.sun.javafx.logging=ALL-UNNAMED
@@ -224,8 +218,6 @@
                     </modulePaths>
                     <destination>target/dist</destination>
                     <javaOptions>
-                        <option>--enable-preview</option>
-                        <option>-Dfile.encoding=UTF-8</option>
                         <option>--add-exports</option>
                         <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                     </javaOptions>
@@ -267,8 +259,6 @@
                         <id>default-cli</id>
                         <configuration>
                             <options>
-                                <option>--enable-preview</option>
-                                <option>-Dfile.encoding=UTF-8</option>
                                 <option>--add-exports</option>
                                 <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                 <option>-Dprofile=${profile}</option>
@@ -280,8 +270,6 @@
                         <id>debug</id>
                         <configuration>
                             <options>
-                                <option>--enable-preview</option>
-                                <option>-Dfile.encoding=UTF-8</option>
                                 <option>--add-exports</option>
                                 <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
